Handle wildcard parameter in ACL list API (#425)
Co-authored-by: Loïc Greffier <loic.greffier@michelin.com>